--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,23 @@
-babel==2.9.0
-python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+alembic==1.6.5
+Babel==2.9.1
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+Flask-Migrate==3.1.0
+Flask-Moment==1.0.2
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+Mako==1.1.4
+MarkupSafe==2.0.1
+phonenumbers==8.12.29
+psycopg2==2.9.1
+python-dateutil==2.8.2
+python-editor==1.0.4
+pytz==2021.1
+six==1.16.0
+SQLAlchemy==1.4.22
+Werkzeug==2.0.1
+WTForms==2.3.3
